Updated Demo Title

--- a/demo.html
+++ b/demo.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
-  <title>pubnub-element Demo</title>
+  <title>pubnub-element Demo/Testing</title>
 
   <script src="bower_components/platform/platform.js"></script>
   <link rel="import" href="pubnub-element.html" publish_key subscribe_key auth_key uuid cipher_key noleave keepalive secret_key ssl windwoing jsonp>
@@ -11,6 +11,7 @@
 
 </head>
 <body >
+<h1>TESTING</h1><hr><hr>
 <!--
   <core-pubnub publish_key="demo" subscribe_key="demo" id="core">
     <core-pubnub-subscribe channel="what" id="sub">
