--- a/demo-element.html
+++ b/demo-element.html
@@ -19,6 +19,11 @@
 <core-pubnub-where-now presence="{{where}}">
 </core-pubnub-where-now>
 
+<!--
+<core-pubnub-replay source="what" destination="what">
+</core-pubnub-replay>
+-->
+
 </core-pubnub>
   <h1>MESSAGES</h1> <hr>
   <template repeat="{{msg in msgs}}">
