--- a/demo.html
+++ b/demo.html
@@ -21,8 +21,11 @@
     <core-pubnub-history channel="what" id="hist">
     </core-pubnub-history>
   </core-pubnub>
--->
   <list-data></list-data>
   
+-->
+  <core-pubnub publish_key="demo" subscribe_key="demo" id="core">
+<core-pubnub-subscribe id="test" channel="what"></core-pubnub-subscribe>
+  </core-pubnub>
 </body>
 </html>
