--- a/pubnub-element.html
+++ b/pubnub-element.html
@@ -212,14 +212,12 @@
           });
         };
         var onReady = function(e) {
-          console.log("WHY U DO DIS");
           self.pubnub = e.detail;
           if (self.subscribe) {
             self.sub();
           }
           self.parentNode.removeEventListener('ready', onReady);
         };
-        console.log(this.parentNode);
         if (this.parentNode.done) {
           onReady({detail : this.parentNode.pubnub});
         }
@@ -271,10 +269,12 @@
           self.parentNode.removeEventListener('ready', onReady);
         }
         console.log(this.parentNode);
-        this.parentNode.addEventListener('ready', onReady);
-        //if (this.parentNode.done) {
-          //onReady({detail: this.parentNode.pubnub});
-        //}
+        if (this.parentNode.done) {
+          onReady({detail: this.parentNode.pubnub});
+        }
+        else {
+          this.parentNode.addEventListener('ready', onReady);
+        }
       },
     });
   </script>
@@ -313,9 +313,11 @@
           });
           self.parentNode.removeEventListener('ready', onReady);
         }
-        this.parentNode.addEventListener('ready', onReady);
         if (this.parentNode.done) {
           onReady({detail: this.parentNode.pubnub});
+        }
+        else {
+          this.parentNode.addEventListener('ready', onReady);
         }
       }
     });
@@ -353,9 +355,11 @@
           });
           self.parentNode.removeEventListener('ready', onReady);
         }
-        this.parentNode.addEventListener('ready', onReady);
         if (this.parentNode.done) {
           onReady({detail: this.parentNode.pubnub});
+        }
+        else {
+          this.parentNode.addEventListener('ready', onReady);
         }
       }
     });
@@ -390,9 +394,11 @@
           });
           self.parentNode.removeEventListener('ready', onReady);
         }
-        this.parentNode.addEventListener('ready', onReady);
         if (this.parentNode.done) {
           onReady({detail: this.parentNode.pubnub});
+        }
+        else {
+          this.parentNode.addEventListener('ready', onReady);
         }
       }
     });
@@ -427,9 +433,11 @@
           });
           self.parentNode.removeEventListener('ready', onReady);
         }
-        this.parentNode.addEventListener('ready', onReady);
         if (this.parentNode.done) {
           onReady({detail: this.parentNode.pubnub});
+        }
+        else {
+          this.parentNode.addEventListener('ready', onReady);
         }
       }
     });
